<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nutrition</string>
    <string name="album_name">nutrition</string>

    <string name="hello_world">Hello world!</string>
    <string name="add_meal_title">Add what you eat</string>
    <string name="pick_time_date">Pick Date</string>
    <string name="pick_time_hour">Pick Hour</string>

    <string name="add_meal_accept">Ok done</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_meal">CreateMealActivity</string>
    <string name="meal_image_alt">Meal image</string>
    <string name="no_meal_in_list">No meals yet!\nAdd your first one</string>
    <string name="default_meal_description">Please add what you eat...</string>

    <string name="no_network_connection_toast">No network connection found</string>

    <color name="meLightFgG">#d3d3d3</color>

</resources>
